# fff-server

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.task/checksum/: build
bench/: .gitignore  Cargo.toml  README.md
bench/data/: .gitignore  generate.sh  queries-fuzzy.txt  queries-repeat.txt  queries-wide.txt
bench/docs/: layer1-runbook.md
bench/src/: main.rs
deploy/: fff-server.service  plocate-server.service
docs/en/: README.md  api.md  architecture.md  benchmark.md  configuration.md  deployment.md  getting-started.md  hdd-tuning.md  mcp.md
docs/zh/: README.md  api.md  architecture.md  benchmark.md  configuration.md  deployment.md  getting-started.md  hdd-tuning.md  mcp.md
install/: SKILL.md.tmpl  install.sh.tmpl
packaging/: nfpm.yaml
packaging/etc/: plocate-server.env  plocate-server.env.example
packaging/scripts/: postinst.sh  postrm.sh  preinst.sh  prerm.sh
packaging/systemd/: plocate-server-updatedb.service  plocate-server-updatedb.timer  plocate-server.service
scripts/: build-plocate-musl.sh
src/: config.rs  dto.rs  error.rs  limits.rs  main.rs  mcp.rs  openapi.rs  rank.rs  state.rs  trending.rs
src/routes/: frontend.rs  health.rs  history.rs  install.rs  lifecycle.rs  mod.rs  reindex.rs  search.rs  stats.rs  trending.rs
web/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  config.ts  i18n.ts  main.tsx  vite-env.d.ts
(+29 files in other folders)
