[package]
name = "plocate-server"
version = "0.2.1"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "process", "time", "io-util"] }
axum = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"

moka = { version = "0.12", features = ["sync"] }

rust-embed = "8"
mime_guess = "2"

utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }

nucleo-matcher = "0.3"

[workspace]
members = [".", "bench"]
resolver = "2"
